--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
+    "sharp": "^0.33.5",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.4"
   },
