--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "real-estate",
   "version": "0.1.0",
   "private": true,
-  
+  "type": "module",
+
   "scripts": {
     "dev": "next dev & node server.js",
     "build": "next build",
