--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "real-estate",
   "version": "0.1.0",
   "private": true,
-  
   "scripts": {
     "dev": "next dev & node server.js",
     "build": "next build",
@@ -20,11 +19,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
     "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "commit": "^0.0.4",
+    "cookie-parser": "^1.4.7",
     "cookies-next": "^4.2.1",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.4.5",
@@ -36,15 +38,18 @@
     "firebase": "^10.13.2",
     "fontawesome": "^5.6.3",
     "framer-motion": "^11.3.21",
+    "git": "^0.1.5",
     "glightbox": "^3.3.0",
     "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
+    "main": "^1000.0.1",
     "match-sorter": "^6.3.4",
     "mysql2": "^3.11.3",
     "next-cookie": "^2.8.0",
     "nextjs-progressbar": "^0.0.16",
     "nprogress": "^0.2.0",
     "pluralize": "^8.0.0",
+    "push": "^0.1.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-countup": "^6.5.3",
