--- a/.env
+++ b/.env
@@ -1,12 +1,13 @@
 # The host of the MySQL server
-MYSQL_HOST=localhost
+MYSQL_HOST=192.168.0.10
 
 # The user used to connect to the MySQL server
-MYSQL_USER=root
+MYSQL_USER=William
 
 # The name of the MySQL database to connect to
 MYSQL_DATABASE=registration_db
 
+MySQL_PASSWORD=demilade1234#
 # The secret key used to sign JSON Web Tokens (JWT)
 JWT_SECRET=eGOog1bQW+7a+FVuVXYprhjrDCWRPsfdy/H7AltXDxs=
 
